gerador_roteiros/tests/testfiles/0.9.0/generatorvalidation/invalid/link_referenciando_passo_inexistente.mm
<map version="0.9.0">
<!-- To view this file, download free mind mapping software FreeMind from http://freemind.sourceforge.net -->
<node CREATED="1346688653894" ID="ID_1110886728" MODIFIED="1346688658774" TEXT="MM">
<node CREATED="1346688659502" ID="ID_490723332" MODIFIED="1346688672027" POSITION="right" TEXT="UC: UC1&#xa;Requisitos: REQ001&#xa;Pr&#xe9;-condi&#xe7;&#xf5;es: PRE1&#xa;P&#xf3;s-condi&#xe7;&#xf5;es: POS1">
<node CREATED="1346688672711" ID="ID_72909995" MODIFIED="1346688679443" TEXT="Sequ&#xea;ncia: 1&#xa;Ator: Usu&#xe1;rio&#xa;A&#xe7;&#xe3;o: PASSO 1">
<node CREATED="1346688680647" ID="ID_183309989" MODIFIED="1346688687732" TEXT="Sequ&#xea;ncia: 2&#xa;Ator: Sistema&#xa;A&#xe7;&#xe3;o: PASSO 2">
<node CREATED="1346688688416" ID="ID_73979171" MODIFIED="1346688695420" TEXT="Sequ&#xea;ncia: 3&#xa;Ator: Usu&#xe1;rio&#xa;A&#xe7;&#xe3;o: PASSO 3">
<node CREATED="1346688696704" ID="ID_1280336935" MODIFIED="1346688705589" TEXT="Sequ&#xea;ncia: 4&#xa;Ator: Usu&#xe1;rio&#xa;A&#xe7;&#xe3;o: PASSO 4"/>
</node>
<node CREATED="1346688707297" ID="ID_899546261" MODIFIED="1346688709896" TEXT="5">
<icon BUILTIN="forward"/>
</node>
</node>
</node>
</node>
</node>
</map>
